<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_show_section_default"
        android:entryValues="@array/settings_show_section_value"
        android:title="@string/settings_show_section_label"
        android:entries="@array/settings_show_section_label"
        android:key="@string/settings_show_section_key"/>

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entryValues="@array/settings_order_by_value"
        android:title="@string/settings_order_by_label"
        android:entries="@array/settings_order_by_label"
        android:key="@string/settings_order_by_key"/>

    <EditTextPreference
        android:defaultValue="@string/settings_results_on_page_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_results_on_page_key"
        android:title="@string/settings_results_on_page_label"/>



</PreferenceScreen>